# viewmaster

./: .gitignore  Dockerfile  README.txt  Viewmaster-No-Image.xcf  Viewmaster-no-imdb.xcf  backup-viewmaster  delete-pod  exec-into-db-pod  exec-into-pod  load.py  make-dev-setup-script.py  monitor-log  move-backup  pyproject.toml  runserver.bash  show-pod-log  viewmaster.yaml
DBase/: importVM.sql
deploy/: deployment.yaml  django.yaml  nginx-config.yaml  postgres.yaml  pvc.yaml  service.yaml  viewmaster-configmap.yaml  viewmaster-ingress.yaml  viewmaster-issuer.yaml  viewmaster-prod-ingress.yaml  viewmaster-prod-issuer.yaml  viewmaster-secrets.env  viewmaster-secrets.env.template
movie_library/: Makefile
movie_library/movie_library/: asgi.py  settings.py  urls.py  wsgi.py
movie_library/viewmaster/: admin.py  api.py  apps.py  extractors.py  forms.py  imdb_import.py  models.py  urls.py  views.py
movie_library/viewmaster/migrations/: 0001_initial.py  0002_alter_movie_category.py  0003_movie_actors_movie_cover_ref_movie_directors_and_more.py  0004_alter_movie_category.py  0005_alter_movie_cost.py  0006_alter_movie_movie_id.py  0007_alter_movie_category_alter_movie_format_and_more.py  0008_alter_movie_category.py  0009_imdbinfo_movie_imdb_info.py  0009_moviedetails_alter_movie_category_and_more.py  0010_alter_moviedetails_unique_together.py  0010_rename_rating_imdbinfo_mpaa_rating_and_more.py  0011_remove_movie_actors_remove_movie_category_and_more.py  0011_remove_movie_actors_remove_movie_cover_ref_and_more.py  0012_moviedetails_cover_file.py  0013_alter_moviedetails_cover_file.py
movie_library/viewmaster/templatetags/: custom_template_tags.py
(+13 files in other folders)
