[project]
name = "movie_library"
version = "0.1.3"
description = "My movies"
authors = [
    {name = "Paul Michali", email = "MY_EMAIL_ADDRESS"}
]
readme = "README.txt"
package-mode = false
requires-python = ">=3.13,<4.0"
dependencies = [
    "django (==4.2.14)",
    "django-auditlog (==2.3.0)",
    "psycopg (==3.2.1)",
    "gunicorn (==22.0.0)",
    "whitenoise (==6.7.0)",
    "poetry (>=2.0.0,<3.0.0)"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
