[project]
name = "movie_library"
version = "0.2.0"
description = "My movies"
authors = [
    {name = "Paul Michali", email = "pc@michali.net"}
]
readme = "README.txt"
package-mode = false
requires-python = ">=3.13,<4.0"
dependencies = [
    "django (==4.2.14)",
    "django-auditlog (==2.3.0)",
    "psycopg (==3.2.1)",
    "gunicorn (==22.0.0)",
    "whitenoise (==6.7.0)",
    "poetry (>=2.0.0,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "simplejson (>=3.20.1,<4.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "pylint (>=3.3.4,<4.0.0)",
    "black (>=25.1.0,<26.0.0)"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
